[ET-184] refactor(seat) : null 가드 추가 (#304)